[gd_scene load_steps=18 format=3 uid="uid://m7s3xp2xoqfy"]

[ext_resource type="Texture2D" uid="uid://brocaxjf0csnc" path="res://data/sprites/attack.png" id="1_6qxan"]
[ext_resource type="Script" path="res://components/node_2d.gd" id="1_nj05h"]
[ext_resource type="Script" path="res://components/enemy_hp.gd" id="2_a3x7q"]
[ext_resource type="Texture2D" uid="uid://dcwa3irn113l8" path="res://data/sprites/attack+.png" id="2_gmxty"]
[ext_resource type="Texture2D" uid="uid://fyjb3wkqwkd0" path="res://data/textures/wcaleniestocktlo.jpeg" id="2_sq8ph"]
[ext_resource type="Script" path="res://components/gracz_hp.gd" id="2_ykvo0"]
[ext_resource type="Texture2D" uid="uid://0438thmurme3" path="res://data/sprites/defense.png" id="3_i8ryy"]
[ext_resource type="Script" path="res://scripts/DiceManager.gd" id="3_oprlb"]
[ext_resource type="Texture2D" uid="uid://s86emd55fdhu" path="res://data/sprites/defense+.png" id="4_aw65w"]
[ext_resource type="Texture2D" uid="uid://chomilp4fcoei" path="res://data/sprites/dice_blank.png" id="4_mes1h"]
[ext_resource type="Script" path="res://scripts/Dice.gd" id="4_nijcb"]
[ext_resource type="Texture2D" uid="uid://b6oas1x5edqdw" path="res://data/sprites/special.png" id="5_sco6w"]
[ext_resource type="AudioStream" uid="uid://bjv2joeyhwiht" path="res://data/sounds/rolling-dice-2-102706.mp3" id="6_y4v3x"]
[ext_resource type="Script" path="res://components/Stat_Buttons.gd" id="7_fjklp"]
[ext_resource type="Texture2D" uid="uid://cngl825iogtkt" path="res://data/sprites/dice_blank_selected.png" id="9_e0spb"]
[ext_resource type="Script" path="res://scripts/ActionHandler.gd" id="12_4mrkr"]
[ext_resource type="Script" path="res://scripts/Stats.gd" id="16_juie0"]

[node name="main_scene" type="Node2D"]
script = ExtResource("1_nj05h")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.701961)
show_behind_parent = true
offset_left = -582.0
offset_top = -328.0
offset_right = 586.0
offset_bottom = 327.0
texture = ExtResource("2_sq8ph")
metadata/_edit_use_anchors_ = true

[node name="Roll" type="Button" parent="."]
offset_left = -561.0
offset_top = -103.0
offset_right = -449.96
offset_bottom = -72.0
scale = Vector2(2.675, 2.675)
text = "Roll"
metadata/_edit_use_anchors_ = true

[node name="Reroll" type="Button" parent="."]
offset_left = -561.0
offset_top = -17.0
offset_right = -449.96
offset_bottom = 14.0
scale = Vector2(2.675, 2.675)
text = "Reroll"
metadata/_edit_use_anchors_ = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-561, -103)
scale = Vector2(2.675, 2.675)
stream = ExtResource("6_y4v3x")

[node name="Dices" type="Node2D" parent="."]
position = Vector2(-563, -310)
script = ExtResource("3_oprlb")

[node name="Dice1" type="TextureButton" parent="Dices"]
offset_right = 100.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice1"]
position = Vector2(50, 50)

[node name="Dice2" type="TextureButton" parent="Dices"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice2"]
position = Vector2(50, 50)

[node name="Dice3" type="TextureButton" parent="Dices"]
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice3"]
position = Vector2(50, 50)

[node name="Dice4" type="TextureButton" parent="Dices"]
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice4"]
position = Vector2(50, 50)

[node name="Dice5" type="TextureButton" parent="Dices"]
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice5"]
position = Vector2(50, 50)

[node name="Dice6" type="TextureButton" parent="Dices"]
offset_left = 200.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
texture_normal = ExtResource("4_mes1h")
texture_pressed = ExtResource("9_e0spb")
script = ExtResource("4_nijcb")

[node name="Icon" type="Sprite2D" parent="Dices/Dice6"]
position = Vector2(50, 50)

[node name="ActionButtons" type="Node2D" parent="."]
script = ExtResource("7_fjklp")

[node name="Atak" type="Button" parent="ActionButtons"]
offset_left = -200.0
offset_right = -100.0
offset_bottom = 100.0
icon = ExtResource("1_6qxan")
expand_icon = true
script = ExtResource("12_4mrkr")
metadata/_edit_use_anchors_ = true

[node name="Atak_Plus" type="Button" parent="ActionButtons"]
offset_left = -100.0
offset_bottom = 100.0
icon = ExtResource("2_gmxty")
expand_icon = true
script = ExtResource("12_4mrkr")
action = 1
metadata/_edit_use_anchors_ = true

[node name="Obrona" type="Button" parent="ActionButtons"]
offset_left = -200.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = 200.0
icon = ExtResource("3_i8ryy")
expand_icon = true
script = ExtResource("12_4mrkr")
action = 2
metadata/_edit_use_anchors_ = true

[node name="Obrona_Plus" type="Button" parent="ActionButtons"]
offset_left = -100.0
offset_top = 100.0
offset_bottom = 200.0
icon = ExtResource("4_aw65w")
expand_icon = true
script = ExtResource("12_4mrkr")
action = 3
metadata/_edit_use_anchors_ = true

[node name="Special1" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_right = 100.0
offset_bottom = 100.0
icon = ExtResource("5_sco6w")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("12_4mrkr")
action = 4
metadata/_edit_use_anchors_ = true

[node name="Special2" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
icon = ExtResource("5_sco6w")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("12_4mrkr")
action = 5
metadata/_edit_use_anchors_ = true

[node name="Special3" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
icon = ExtResource("5_sco6w")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("12_4mrkr")
action = 6
metadata/_edit_use_anchors_ = true

[node name="Special4" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
icon = ExtResource("5_sco6w")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("12_4mrkr")
action = 7
metadata/_edit_use_anchors_ = true

[node name="Action_Description" type="RichTextLabel" parent="ActionButtons"]
offset_left = -200.0
offset_top = 225.0
offset_right = 200.0
offset_bottom = 300.0
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Enemy" type="Node2D" parent="." node_paths=PackedStringArray("health_display", "armor_display")]
script = ExtResource("16_juie0")
max_health = 100
health_display = NodePath("HpDisplay")
armor_display = NodePath("ArmorDisplay/text")

[node name="HpDisplay" type="ProgressBar" parent="Enemy"]
offset_left = -138.0
offset_top = -150.0
offset_right = 376.0
offset_bottom = -83.0
scale = Vector2(0.575032, 0.575032)
step = 1.0
script = ExtResource("2_a3x7q")
metadata/_edit_use_anchors_ = true

[node name="ArmorDisplay" type="Node2D" parent="Enemy"]
position = Vector2(-555, -402)

[node name="icon" type="Sprite2D" parent="Enemy/ArmorDisplay"]
position = Vector2(730, 268)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_i8ryy")

[node name="text" type="RichTextLabel" parent="Enemy/ArmorDisplay"]
offset_left = 750.0
offset_top = 255.0
offset_right = 790.0
offset_bottom = 295.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Player" type="Node2D" parent="." node_paths=PackedStringArray("health_display", "armor_display")]
script = ExtResource("16_juie0")
max_health = 100
health_display = NodePath("HpDisplay")
armor_display = NodePath("ArmorDisplay/text")

[node name="ArmorDisplay" type="Node2D" parent="Player"]
position = Vector2(-513, -260)

[node name="icon" type="Sprite2D" parent="Player/ArmorDisplay"]
position = Vector2(730, 268)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_i8ryy")

[node name="text" type="RichTextLabel" parent="Player/ArmorDisplay"]
offset_left = 750.0
offset_top = 255.0
offset_right = 790.0
offset_bottom = 295.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="HpDisplay" type="ProgressBar" parent="Player"]
offset_left = -138.0
offset_top = 210.0
offset_right = 376.0
offset_bottom = 277.0
scale = Vector2(0.575032, 0.575032)
step = 1.0
script = ExtResource("2_ykvo0")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Roll" to="." method="Roll"]
[connection signal="pressed" from="Roll" to="Dices" method="Roll"]
[connection signal="pressed" from="Reroll" to="Dices" method="Reroll"]
[connection signal="mouse_entered" from="ActionButtons/Atak" to="ActionButtons" method="_on_atak_plus_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Atak" to="ActionButtons" method="_on_atak_plus_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Atak" to="ActionButtons/Atak" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Atak_Plus" to="ActionButtons" method="_on_atak_plus_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Atak_Plus" to="ActionButtons" method="_on_atak_plus_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Atak_Plus" to="ActionButtons/Atak_Plus" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Obrona" to="ActionButtons" method="_on_obrona_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Obrona" to="ActionButtons" method="_on_obrona_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Obrona" to="ActionButtons/Obrona" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Obrona_Plus" to="ActionButtons" method="_on_obrona_plus_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Obrona_Plus" to="ActionButtons" method="_on_obrona_plus_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Obrona_Plus" to="ActionButtons/Obrona_Plus" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special1" to="ActionButtons" method="_on_special_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special1" to="ActionButtons" method="_on_special_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special1" to="ActionButtons/Special1" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special2" to="ActionButtons" method="_on_special_2_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special2" to="ActionButtons" method="_on_special_2_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special2" to="ActionButtons/Special2" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special3" to="ActionButtons" method="_on_special_3_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special3" to="ActionButtons" method="_on_special_3_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special3" to="ActionButtons/Special3" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special4" to="ActionButtons" method="_on_special_4_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special4" to="ActionButtons" method="_on_special_4_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special4" to="ActionButtons/Special4" method="_on_button_press"]
[connection signal="onDeath" from="Enemy" to="." method="_on_enemy_on_death"]
